--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-$primary-color: #5247c7;
+$primary-color: #49A3DC;
 // add font Tajawal with all weights
 @font-face {
     font-family: Tajawal;
@@ -92,6 +92,12 @@ body::-webkit-scrollbar-thumb {
     box-shadow: 0 0 4px #00000040;
 }
 
+.bg-home-image {
+    background-image: url("./illustrations/spikes.png");
+    // background-size: cover;
+    // background-position: center;
+    // background-repeat: no-repeat;
+}
 .navigation-gradient {
     // background: linear-gradient(166deg, #8573e2 30%, #49a3dc);
     background: linear-gradient(166deg, #0e3069 30%, #3580bd);
